--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,3 +98,25 @@ footer {
     font-size: 11px;
     padding-top: 20px;
 }
+
+/* Contact Page */
+
+#name, #mail{
+    width: 100%;
+    height: 25px;
+    margin-bottom: 10px;
+    padding: 5px;
+}
+
+#msg {
+    width: 100%;
+    height: 150px;
+    margin-bottom: 10px;
+}
+
+.submit {
+    background-color: #4aaaa5;;
+    color: #fff;
+    padding: 6px 20px;
+    font-size: 12px;
+}
