--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,3 +120,23 @@ footer {
     padding: 6px 20px;
     font-size: 12px;
 }
+
+/* Portfolio Page */
+
+.wrap {
+    float: left;
+    position: relative;
+    margin-right: 60px;
+    margin-bottom: 30px;
+}
+
+.wrap-center {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+    bottom: 15px;
+    background-color: #4aaaa5;
+    color: #fff;
+    padding: 10px;
+}
